<resources>
    <string name="app_name">Notes</string>
    <string name="day_of_week">День недели: </string>
    <string name="hint_title">Заголовок заметки: </string>
    <string name="hint_description">Описание заметки: </string>
    <string name="priority_1">1</string>
    <string name="priority_2">2</string>
    <string name="priority_3">3</string>
    <string name="add_note">Добавить заметку</string>
    <string name="warning_add_note">Заполните все поля</string>

    <string-array name="days_of_week">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>
</resources>